--- a/style.css
+++ b/style.css
@@ -92,6 +92,13 @@ button {
     padding-bottom: 64px;
 }
 
+.quote {
+    background-color: #E5E7EB;
+    padding: 200px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-style: italic;
+}
+
 .footer {
     display: flex;
     justify-content: center;
