--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ img {
 button {
     background-color: #3882F6;
     color: #f9fAf8;
-    padding: 8px;
+    padding: 10px 24px;
     border: 0 solid #3882F6;
     border-radius: 0.25em;
 }
@@ -95,8 +95,57 @@ button {
 .quote {
     background-color: #E5E7EB;
     padding: 200px;
-    font-family: Arial, Helvetica, sans-serif;
+}
+
+.article {
     font-style: italic;
+    font-size: 36px;
+    font-weight: light;
+    color: #1F2937;
+    display: flex;
+    justify-content: center;
+}
+
+.author {
+    display: flex;
+    justify-content: flex-end;
+    font-family: 'Times New Roman', Times, serif;
+    font-weight: bold;
+    font-size: 24px;
+}
+
+.call-to-action {
+    display: flex;
+    justify-content: center;
+    padding-top: 100px;
+    padding-bottom: 174px;
+}
+
+.callbox {
+    background: #3882F6;
+    border: 3px solid #3882F6;
+    border-radius: 0.25em;
+    display: flex;
+    justify-content: space-between;
+    gap: 48px;
+    align-items: center;
+    padding: 20px 100px;
+}
+
+button#call-button {
+    border: 1px solid #ffffff;
+}
+
+.call-text {
+    font-size: 24px;
+    font-weight: 900;
+    color: #f9fAf8;
+}
+
+.call-two-text {
+    font-size: 14px;
+    font-weight: lighter;
+    color: #f9fAf8;
 }
 
 .footer {
